# django-ydb-backend

./: .dockerignore  .gitignore  .readthedocs.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  README.md  codecov.yml  docker-compose.yml  pyproject.toml
.github/scripts/: increment_version.py
.github/workflows/: build.yml  changelog.yml  docs.yml  lint.yml  python-publish.yml  slo.yml  tests.yml
conformance/: run.sh  settings.py
django-ydb-backend/: pyproject.toml
docs/: .gitignore  CONFIGURATIONS.md  CONTRIB.md  FIELDS.md  MIGRATIONS.md  Makefile  OPERATIONS.md  README.md  RETRIES.md  SUPPORT.md  TRANSACTIONS.md  conf.py  index.rst
docs/_templates/: .gitkeep
examples/: README.md
examples/bookstore/: README.md  manage.py
examples/bookstore/bookstore/: admin.py  apps.py  asgi.py  forms.py  models.py  serializers.py  settings.py  urls.py  views.py  wsgi.py
examples/bookstore/bookstore/management/commands/: workload.py
examples/bookstore/bookstore/migrations/: 0001_initial.py  0002_bookstore_description.py  0002_demo_content.py  0003_bookstore_quantity_alter_bookstore_price.py  0004_bookstore_release_dt.py  0005_bookstore_limited_edition.py
examples/bookstore/bookstore/templates/: base.html
examples/bookstore/bookstore/templates/bookstore/: book_list.html  record_list.html
examples/bookstore/bookstore/templates/flatpages/: default.html
examples/bookstore/config/: asgi.py  settings.py  urls.py  wsgi.py
examples/bookstore/myapp/: views.py
examples/bookstore/myapp/migrations/: 0002_bookstore_description.py  0003_bookstore_quantity_alter_bookstore_price.py  0004_bookstore_release_dt.py  0005_bookstore_limited_edition.py
examples/bookstore/myapp/templates/myapp/: record_confirm_delete.html  record_form.html
examples/simplecrud/: manage.py
examples/simplecrud/myapp/: forms.py  models.py  views.py
examples/simplecrud/myapp/migrations/: 0001_initial.py
examples/simplecrud/myapp/templates/myapp/: item_confirm_delete.html  item_form.html  item_list.html
examples/simplecrud/simplecrud/: asgi.py  settings.py  urls.py  wsgi.py
tests/: base_test.py  runtests.py  settings.py
tests/aggregates/: models.py  test_aggregate.py
tests/backend/: test_base.py  test_operations.py
tests/backends/: models.py
tests/backends/ydb/: test_base.py  test_client.py  test_creation.py  test_features.py  test_fixtures.py  test_indexes.py  test_introspection.py  test_operations.py  test_retry.py  test_schema.py
tests/compiler/: models.py  test_compiler_helpers.py  test_delete.py  test_functions.py  test_insert.py  test_insert_returning.py  test_not_null.py  test_pagination.py  test_param_typing.py  test_pattern_escaping.py  test_select.py  test_update.py  test_upsert.py
tests/django_contrib/: test_smoke.py
tests/m2m/: models.py  test_m2m.py
tests/migration_executor/: models.py  test_executor.py
tests/migration_executor/migrations_supported/: 0001_initial.py  0002_columns_and_index.py  0003_drops.py  0004_rename_and_delete.py
tests/migration_executor/migrations_unsupported/: 0001_initial.py  0002_alter_default.py  0002_alter_pk.py  0002_alter_type.py  0002_make_not_null.py  0002_rename_column.py  0002_unique_constraint.py
tests/slo/: Dockerfile  README.md  docker-entrypoint.sh  requirements.txt
tests/slo/src/: __main__.py  generator.py  jobs.py  metrics.py  ratelimiter.py  settings.py
tests/slo/src/slo_app/: apps.py  models.py
tests/transactions/: models.py  test_transactions.py
tests/type/: models.py  test_auto_inc_fields.py  test_date_time_fields.py  test_decimal_precision.py  test_django_auto_inc_fields.py  test_django_date_time_fields.py  test_django_floating_point_fields.py  test_django_text_related_fields.py  test_floating_point_fields.py  test_integer_field.py  test_json_field.py  test_nullable_fields.py  test_text_related_fields.py
ydb_backend/: retry.py
ydb_backend/backend/: base.py  client.py  creation.py  features.py  introspection.py  operations.py  schema.py
ydb_backend/models/: manager.py
ydb_backend/models/sql/: compiler.py  query.py
