[project]
name = "django-ydb-backend"
version = "0.0.0"
description = "Django backend for YDB"
authors = [
    {name = "Yandex LLC", email = "ydb@yandex-team.ru"},
]
readme = "README.md"
requires-python = ">=3.8,<4"
dependencies = [
    "ydb-dbapi (>=0.1.8,<0.2.0)",
    "django (>=3.2.0,<6.0.0)"
]

[tool.poetry]
packages = [
    { include = "ydb_backend" },
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
